--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,13 +19,14 @@ $background-color: #909090 !important;
 
 /*@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900|Yeseva+One&display=swap");*/
 @import url('https://fonts.googleapis.com/css2?family=Duru+Sans&family=Goldman:wght@400;700&family=Montserrat+Subrayada:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400..700;1,400..700&family=Duru+Sans&family=Goldman:wght@400;700&family=Montserrat+Subrayada:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat+Subrayada:wght@400;700&display=swap');
+
 $font-family-base: "Roboto", sans-serif;
-$headings-font-family: "Montserrat", cursive;
+$headings-font-family: "Bebas Neue", sans-serif;
 
 // Size
 $font-size-base: 1.125rem; // 18px
-$h1-font-size: 60px;
+$h1-font-size: 80px;
 $h2-font-size: 60px;
 $h3-font-size: 30px;
 $h4-font-size: 25px;
